# libra2-core

./: .backportrc.json  .dockerignore  .gitignore  .gitmodules  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RUST_CODING_STYLE.md  RUST_SECURE_CODING.md  SECURITY.md
api/: Cargo.toml  Makefile  README.md
api/doc/: CHANGELOG.md  README.md  spec.html  spec.json  spec.yaml
api/fuzzing/: README.md
api/goldens/: aptos_api__tests__transactions_test__test_get_transaction_by_hash_with_delayed_internal_indexer.json  aptos_api__tests__transactions_test__test_get_transaction_by_hash_with_delayed_internal_indexer_orderless.json  aptos_api__tests__transactions_test__test_get_transaction_by_hash_with_delayed_internal_indexer_payload_v2.json  aptos_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  aptos_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload.json  aptos_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload_orderless.json  aptos_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_entry_function_payload_payload_v2.json  aptos_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  aptos_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified.json  aptos_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_address_payload_v2.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_module_name_payload_v2.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name_payload_v2.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments_orderless.json  aptos_api__tests__transactions_test__test_get_txn_execute_failed_by_missing_entry_function_arguments_payload_v2.json  aptos_api__tests__transactions_test__test_post_bcs_format_transaction.json  aptos_api__tests__transactions_test__test_simulation_failure_with_move_abort_error_rendering.json  aptos_api__tests__transactions_test__test_simulation_failure_with_move_abort_error_rendering_orderless.json  aptos_api__tests__view_function__test_view_does_not_exist.json  aptos_api__tests__view_function__test_view_error_type_resolution_error.json  libra2_api__tests__invalid_post_request_test__test_invalid_payload_type.json  libra2_api__tests__transactions_test__test_get_transactions_output_genesis_transaction.json  libra2_api__tests__transactions_test__test_get_transactions_param_limit_exceeds_limit.json  libra2_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified_payload_v2.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_entry_function_validation_payload_v2.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_arguments_payload_v2.json  libra2_api__tests__transactions_test__test_get_txn_execute_failed_by_invalid_entry_function_name_orderless.json  libra2_api__tests__transactions_test__test_post_bcs_format_transaction_orderless.json  libra2_api__tests__transactions_test__test_post_bcs_format_transaction_payload_v2.json  libra2_api__tests__transactions_test__test_simulation_failure_with_detail_error.json  (+3 more)
api/move-test-package/: Move.toml
api/openapi-spec-generator/: Cargo.toml
api/src/: accept_type.rs  accounts.rs  basic.rs  bcs_payload.rs  blocks.rs  check_size.rs  context.rs  error_converter.rs  events.rs  failpoint.rs  index.rs  lib.rs  log.rs  metrics.rs  page.rs  response.rs  runtime.rs  set_failpoints.rs  spec.rs  state.rs  transactions.rs  view_function.rs
api/test-context/: Cargo.toml
api/types/: Cargo.toml
aptos-move/aptos-transaction-benchmarks/: Cargo.toml
aptos-move/aptos-transaction-simulation/: Cargo.toml
aptos-move/aptos-vm-logging/: Cargo.toml
aptos-move/aptos-workspace-server/: Cargo.toml
aptos-move/e2e-benchmark/: Cargo.toml
aptos-move/e2e-testsuite/: Cargo.toml
aptos-move/libra2-debugger/: Cargo.toml
aptos-move/replay-benchmark/: Cargo.toml  README.md
config/: Cargo.toml  README.md
config/global-constants/: Cargo.toml
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/safety-rules/: Cargo.toml
consensus/src/: block_preparer.rs  consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  pending_order_votes.rs  (+11 more)
dkg/: Cargo.toml
libra2-node/: Cargo.toml
mempool/: Cargo.toml  README.md
vm-validator/: Cargo.toml
(+5716 files in other folders)
