[package]
name = "aptos-api"
description = "Aptos REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libra2-api-types = { workspace = true }
libra2-bcs-utils = { workspace = true }
libra2-build-info = { workspace = true }
libra2-config = { workspace = true }
libra2-crypto = { workspace = true }
libra2-gas-schedule = { workspace = true }
libra2-global-constants = { workspace = true }
libra2-logger = { workspace = true }
libra2-mempool = { workspace = true }
libra2-metrics-core = { workspace = true }
libra2-runtimes = { workspace = true }
libra2-sdk = { workspace = true }
libra2-storage-interface = { workspace = true }
libra2-types = { workspace = true }
libra2-vm = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
mini-moka = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
aptos-api-test-context = { workspace = true }
libra2-cached-packages = { workspace = true }
libra2-framework = { workspace = true }
libra2-gas-meter = { workspace = true }
libra2-gas-schedule = { workspace = true, features = ["testing"] }
libra2-move-stdlib = { workspace = true }
libra2-proptest-helpers = { workspace = true }
libra2-transaction-filters = { workspace = true, features = ["fuzzing"] }
move-package = { workspace = true }
passkey-types = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["mime"]
